--- a/RF_Go/Components/MainTab.razor
+++ b/RF_Go/Components/MainTab.razor
@@ -16,13 +16,10 @@
         }
         else
         {
-    <div class="d-flex pl-6 pr-6 w-100 align-center justify-space-between">
-        <!-- Title on the left -->
+    <div class="d-flex pl-6 pr-6 w-100 align-center justify-space-between pt-2">
         <div class="flex-none d-flex">
-            <MudText Typo="Typo.h5" Class="">Devices</MudText>
+            <MudText Typo="Typo.h6" Class="">Devices</MudText>
         </div>
-
-        <!-- Buttons on the right -->
         <div class="">
             <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="RFCalcul">
                 Calculate
@@ -49,11 +46,9 @@
         <RowTemplate>
                 <MudTd>
                     <div class="d-flex flex-column">
-                        <p>@context.Brand - @context.Model</p>
-                        
-                        <p>@context.ID - @context.Name</p>
-                        <p>@context.Frequency - @GetFrequencyDetails(context)</p>
-                        <p>@(context.IpAddress != null ? context.IpAddress : "No ip-address")</p>
+                    <MudTextField Typo="Typo.body2" Style="padding:0;font-size: 14px;" Label="@GetBrandAndModel(context)" @bind-Value="@context.Name"
+                             @onblur="() => SaveDeviceAsync(context)" HelperText="@GetFrequency(context)"/>
+                    <MudTextField Typo="Typo.body2" Style="margin:0;font-size: 14px;" @bind-Value="@context.IpAddress" Placeholder="IP Address" @onblur="() => SaveDeviceAsync(context)" Class="custom-textfield" />
                     </div>
                 </MudTd>
                 @* <MudTd>@SetGetNumberOfChannels(context)</MudTd> *@
@@ -104,6 +99,7 @@
     private List<string> clickedEvents = new();
 
 
+
     private string CalculateStyle(RFChannel chan)
     {
         string color = chan.Checked ? "lightgreen" : "red";
@@ -128,12 +124,17 @@
             return string.Empty;
         }
     }
-    private string GetFrequencyDetails(RFDevice context)
+    private string GetBrandAndModel(RFDevice device)
     {
-        int startRange = DeviceData.Brands[context.Brand][context.Model][context.Frequency][0];
-        int endRange = DeviceData.Brands[context.Brand][context.Model][context.Frequency][1];
-        return $"{startRange:#,0} - {endRange:#,0}";
+        return device.Brand + "-" + device.Model;
     }
+    private string GetFrequency(RFDevice device)
+    {
+        int startRange = DeviceData.Brands[device.Brand][device.Model][device.Frequency][0];
+        int endRange = DeviceData.Brands[device.Brand][device.Model][device.Frequency][1];
+        return device.Frequency + " - " + $"{startRange:#,0} - {endRange:#,0}";
+    }
+
     protected override async Task OnInitializedAsync()
     {
         await DevicesViewModel.LoadDevicesAsync();
@@ -142,58 +143,9 @@
     }        private bool isAddingDevice = false;
     private int selectedQuantity = 1;
     private List<int> frequencyOptions = Enumerable.Range(1, 99).ToList();
-    private async Task SaveDeviceInDB(RFDevice device)
+    private void DeleteDevice(RFDevice device)
     {
-        SaveDataDevicesInfo(device);
-        SaveDataChannelsInfo(device);
-
-        for (int i = 0; i < selectedQuantity; i++)
-        {
-            await DevicesViewModel.SaveDeviceAsync();
-        }
-
-        await DevicesViewModel.LoadDevicesAsync();
-        StateHasChanged();
-    }
-    private void DeleteDevice(RFDevice context)
-    {
-        DevicesViewModel.SetOperatingDevice(context);
-    }
-
-    private void SaveDataDevicesInfo(RFDevice device)
-    {
-        Debug.WriteLine("SaveDataDevice is called");
-        device.Range = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
-        device.Step = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][3];
-        device.NumberOfChannels = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][2];
-        Debug.WriteLine(device.NumberOfChannels);
-        device.Channels = new List<RFChannel>();
-        for (int i = 0; i < device.NumberOfChannels; i++)
-        {
-            device.Channels.Add(new RFChannel());
-            Debug.WriteLine("Channel created");
-        }
-    }
-    private void SaveDataChannelsInfo(RFDevice device)
-    {
-        var freq = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
-        int count = 1;
-        foreach (RFChannel chan in device.Channels)
-        {
-            chan.Range = device.Range;
-            chan.Step = device.Step;
-            chan.chanNumber = count;
-            chan.SelfSpacing = freq[4];
-            chan.ThirdOrderSpacing = freq[5];
-            chan.FifthOrderSpacing = freq[6];
-            chan.SeventhOrderSpacing = freq[7];
-            chan.ThirdOrderSpacing3Tx = freq[8];
-            count++;
-        }
-    }
-    private void AddDevice()
-    {
-        isAddingDevice = true;
+        DevicesViewModel.SetOperatingDevice(device);
     }
     private async Task RFCalcul()
     {
@@ -269,7 +221,6 @@
 
         return overlappingGroups;
     }
-
     private bool DoGroupsOverlap(RFGroup group1, RFGroup group2)
     {
         foreach (var period1 in group1.TimePeriods)
@@ -284,16 +235,20 @@
         }
         return false;
     }
-
     private bool DoPeriodsOverlap(TimePeriod period1, TimePeriod period2)
     {
         var answer = period1.StartTime < period2.EndTime && period1.EndTime > period2.StartTime;
         return period1.StartTime < period2.EndTime && period1.EndTime > period2.StartTime;
     }
-
+    private async Task SaveDeviceAsync(RFDevice device)
+    {
+        DevicesViewModel.SetOperatingDevice(device);
+        await DevicesViewModel.SaveDeviceAsync();
+    }
     private async Task DeleteAll()
     {
         await DevicesViewModel.DeleteAllDeviceAsync();
+        // forcing the refresh of the UI 
         await OnDeviceSaved.InvokeAsync();
     }
     }
