--- a/RF_Go/Pages/Index.razor
+++ b/RF_Go/Pages/Index.razor
@@ -17,18 +17,18 @@
 
 <MudTabs KeepPanelsAlive="true" Elevation="4" Centered="true" Rounded="false" AlwaysShowScrollButtons="true" Class="flex justify-content-around">
     <MudTabPanel Text="Devices" ID='"devices_tab"'>
-        <MudGrid Spacing="2" Class="w-100 display-6 pr-6">
-            <MudItem xs="12" md="3">
+        <MudGrid Spacing="1" Class="w-100 display-6 pl-6 pr-6">
+            <MudItem xs="12" md="2">
                 <MudPaper Class="mt-4">
                     <DeviceSelection DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
                 </MudPaper>
             </MudItem>
-            <MudItem xs="12" md="6">
+            <MudItem xs="12" md="8">
                 <MudPaper Class="mt-4">
                     <MainTab DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
                 </MudPaper>
             </MudItem>
-            <MudItem xs="12" md="3">
+            <MudItem xs="12" md="2">
                 <MudPaper Class="mt-4">
                     <SlidersSpacers DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
                 </MudPaper>
