--- a/RF_Go/Components/DeviceSelection.razor
+++ b/RF_Go/Components/DeviceSelection.razor
@@ -10,7 +10,7 @@
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
 
-<MudText Typo="Typo.h5" Class="pl-6">Devices Selection</MudText>
+<MudText Typo="Typo.h5" Class="pl-6 pt-2">Devices Selection</MudText>
 
 <div id="SelectDeviceMenu">
         <MudGrid Spacing="2" Justify="Justify.Center" Class="pl-6 pr-6">
