--- a/RF_Go/Components/SlidersSpacers.razor
+++ b/RF_Go/Components/SlidersSpacers.razor
@@ -9,7 +9,7 @@
 @using System.Diagnostics
 
 
-<MudText Typo="Typo.h5" Class="pl-6">Spacing</MudText>
+<MudText Typo="Typo.h5" Class="pl-6 pt-2">Spacing</MudText>
 <div class="SlidersSpacers">
     @foreach (var deviceGroup in DevicesViewModel.Devices.GroupBy(d => new { d.Brand, d.Model, d.Frequency }))
     {
