--- a/RF_Go/Pages/Index.razor
+++ b/RF_Go/Pages/Index.razor
@@ -19,8 +19,8 @@
 
 <MudTabs KeepPanelsAlive="true" Elevation="4" Centered="true" Rounded="false" AlwaysShowScrollButtons="true" Class="flex justify-content-around">
     <MudTabPanel Text="Devices" ID='"devices_tab"'>
-        <MudGrid Spacing="1" Class="w-100 display-6 pl-6 pr-6">
-            <MudItem xs="12" md="2">
+        <MudGrid Spacing="0" Class="w-100 display-6 px-2">
+            <MudItem xs="12" md="2" Class="px-2">
                 <MudPaper Class="mt-4">
                     <DeviceSelection DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
                 </MudPaper>
@@ -28,12 +28,12 @@
                      <TVChannelsFilter ExclusionChannelViewModel="ExclusionChannelViewModel" /> 
                 </MudPaper>
             </MudItem>
-            <MudItem xs="12" md="8">
+            <MudItem xs="12" md="8" Class="px-2">
                 <MudPaper Class="mt-4">
                     <MainTab DeviceData="deviceData" ExclusionChannelViewModel="ExclusionChannelViewModel" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
                 </MudPaper>
             </MudItem>
-            <MudItem xs="12" md="2">
+            <MudItem xs="12" md="2" Class="px-2">
                 <MudPaper Class="mt-4">
                     <SlidersSpacers DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
                 </MudPaper>
@@ -100,7 +100,7 @@
     {
         var context = new DatabaseContext();
         DevicesViewModel = new DevicesViewModel(context);
-        var json = File.ReadAllText(Path.Combine(AppDomain.CurrentDomain.BaseDirectory, "Shared", "Devices.json"));
+        var json = JsonFiles.Devices;
         deviceData = JsonConvert.DeserializeObject<DeviceData>(json);
         await DevicesViewModel.LoadDevicesAsync();
         await base.OnInitializedAsync();
